<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".Desingactivity">



    <Button
        android:id="@+id/bt_sector_1"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="170dp"
        android:layout_height="250dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="128dp"
        android:text="@string/sector_1_desing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_sector_2"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="170dp"
        android:layout_height="250dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="16dp"
        android:text="@string/sector_2_desing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_sector_3"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="170dp"
        android:layout_height="250dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="104dp"
        android:text="@string/sector_3_desing"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_sector_1"
        app:layout_constraintVertical_bias="0.95" />

    <Button
        android:id="@+id/bt_sector_4"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="170dp"
        android:layout_height="250dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="104dp"
        android:text="@string/sector_4_desing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_sector_2"
        app:layout_constraintVertical_bias="0.95" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:layout_marginStart="167dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="168dp"
        android:fontFamily="@font/font_normal"
        android:text="GreenTech"
        android:textSize="50sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tx_designer"
        android:layout_width="104dp"
        android:layout_height="35dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/font_3"
        android:gravity="top"
        android:text="@string/designer_tx"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_sector_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bt_back"
        android:layout_width="63dp"
        android:layout_height="47dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:text=""
        android:drawableLeft="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/green"
        />


</androidx.constraintlayout.widget.ConstraintLayout>