<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    android:background="@color/green">


    <RelativeLayout
        android:id="@+id/content_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#A5D6A7"
            android:fontFamily="@font/font_normal"
            app:title=""
            app:titleTextColor="#000000" />


        <Button
            android:id="@+id/bt_desing"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="420dp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/font_normal"
            android:text="@string/bt_desing"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt_smart"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar_menu"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="544dp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/font_normal"
            android:text="@string/bt_smart"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tx_informative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="400dp"
            android:fontFamily="@font/font_normal"
            android:text="Select one or both modes for your GreenTech plants"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tx_info_desing"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:layout_alignTop="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="475dp"
            android:fontFamily="@font/font_explications"
            android:gravity="center"
            android:text="@string/tx_info_desing"
            android:textColor="@color/black"
            android:textSize="9sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:layout_alignTop="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="605dp"
            android:fontFamily="@font/font_explications"
            android:gravity="center"
            android:text="@string/tx_info_smart"
            android:textColor="@color/black"
            android:textSize="9sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="50dp"
            android:layout_marginEnd="168dp"
            android:fontFamily="@font/font_normal"
            android:text="@string/greentech_font_tx"
            android:textColor="@color/black"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/tx_menu"
            android:layout_width="104dp"
            android:layout_height="37dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="250dp"
            android:layout_marginVertical="110dp"
            android:layout_marginTop="111dp"
            android:layout_marginEnd="39dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/font_3"
            android:gravity="top"
            android:text="Menu"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="195dp"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/logo_menu" />


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav_view"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="#A5D6A7"
            android:paddingBottom="0dp"
            app:menu="@menu/bottom_nav_menu" />

        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="0dp"
            android:layout_height="0dp" >

        </FrameLayout>


    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navview"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/header_navegation_drawer"
        app:menu="@menu/nav_options"
        android:layout_gravity="start">

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>